[package]
name = "given_content_engine"
version = "0.1.0"
authors = ["Edwin van der Graaf <me@edwn.gr>"]

[dependencies]
git2 = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

[dev-dependencies]
tempdir = "0.3"
test_support = { path = "tests/support", version = "0.1" }
